# emlearn

./: .appveyor.yml  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CITATION.cff  LICENSE.md  MANIFEST.in  README.md  TODO.md  audiofeat.py  emlearn.ino  emtrees.h  emtrees_test.h  emtreesmodule.cpp  library.json  micropython.mk  requirements.dev.txt  requirements.txt  setup.py  test.sh
.github/: FUNDING.yml
bindings/: eml_audio.cpp  eml_bayes.cpp  eml_micropython.c  eml_net.cpp  eml_signal.cpp  eml_trees.cpp  emlpy_common.hpp
brand/: README.md
docs/: .gitignore  CONTRIBUTING.md  anomaly_detection.rst  api_reference.rst  bayes.rst  c_api.rst  cgen.rst  classification.rst  common.rst  conf.py  convert.rst  developing.md  eml_audio.rst  eml_bayes.rst  eml_common.rst  eml_distance.rst  eml_fft.rst  eml_iir.rst  eml_log.rst  eml_mixture.rst  eml_neighbors.rst  eml_net.rst  eml_trees.rst  evaluate.rst  event_detection.rst  examples.rst  feature_extraction.rst  getting_started_arduino.rst  getting_started_browser.rst  getting_started_host.rst  getting_started_micropython.rst  getting_started_zephyr.rst  index.rst  internals.rst  introduction.rst  made_with.md  model_optimization.rst  nets.rst  notes.md  optimizing-tree-models.md  (+6 more)
emlearn/: __init__.py  bayes.py  cgen.py  common.py  convert.py  creserved.py  data.py  distance.py  eml_array.h  eml_audio.h  eml_audio_features.h  eml_bayes.h  eml_benchmark.h  eml_common.h  eml_csv.h  eml_data.h  eml_distance.h  eml_dsp.h  eml_fft.h  eml_fileio.h  eml_fixedpoint.h  eml_iir.h  eml_io.h  eml_log.h  eml_mixture.h  eml_neighbors.h  eml_net.h  eml_net_common.h  eml_net_fixedpoint.h  eml_npy.h  eml_qsort.h  eml_quantizer.h  (+13 more)
platform_examples/zephyr/motion_recognition/: CMakeLists.txt  Kconfig  README.rst  flashdisk.overlay  prj.conf  sample.yaml  west.yml
platform_examples/zephyr/motion_recognition/src/: main.c  sensor_reader.c  sensor_reader.h  usb_disk.c
(+105 files in other folders)
